--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,10 @@ import("stringr", "txtplot")
 importFrom("stats", "median")
     importFrom("utils", "setTxtProgressBar", "txtProgressBar")
  importFrom("utils", "data")
-export('countMedian', 'plotMedianReadCounts')
-import("RUnit")
+export('countMedian', 'plotMedianReadCounts', 'countReadsMara2', 'scaffoldMeanRatios', 'ratiosCorrelation', 'countReadsMara3', 'countReadsMara', 'countCpt', 'findChimericScaffold')
+import("RUnit", "Rsamtools", "changepoint")
+#importFrom("doParallel", "%dopar%", "foreach")
+#importFrom("foreach","%dopar%")
+#importFrom(foreach,"%dopar%")
+importFrom("utils", "globalVariables")
+import("foreach", "iterators", "parallel")
